# rsyslog-backup

./: Makefile.am  configure.ac
plugins/imdocker/: Makefile.am  imdocker.c  imdocker_unit_tests.h
plugins/imfilethrottleids/: Makefile.am  README.md  imfilethrottleids.c  install.sh  throttleids.c  throttleids.h
plugins/imfilethrottleids/test/: generator.py  policy.csv  rsyslog.conf
